--- a/web/themes/custom/portfolio/pcss/tailwind.pcss
+++ b/web/themes/custom/portfolio/pcss/tailwind.pcss
@@ -11,5 +11,10 @@ pre {
   color: lightcyan;
   padding: 1rem;
   margin: 1rem 0;
+  width: 100%;
+  height: 100%;
+  white-space: pre-wrap; /* allows text to wrap within the container */
+  word-wrap: break-word; /* breaks long words onto the next line if needed */
 }
+
 
